--- a/public/createOrder.html
+++ b/public/createOrder.html
@@ -15,7 +15,7 @@
         .sidebar { width: 300px; background-color: #fff; padding: 20px; overflow-y: auto; }
         .main-content { flex-grow: 1; display: flex; flex-direction: column; }
         #map { flex-grow: 1; }
-        .order-list { max-height: calc(100vh - 250px); overflow-y: auto; }
+        .order-list { max-height: calc(100vh - 100px); overflow-y: auto; }
         .order-item { background-color: #fff; margin-bottom: 10px; padding: 10px; border-radius: 5px; position: relative; }
         .order-item:hover { background-color: #f0f0f0; }
         .filter-section { margin-bottom: 20px; }
@@ -30,11 +30,8 @@
         <div class="sidebar">
             <h2>Pedidos</h2>
             <div class="filter-section">
-                <label><input type="checkbox" id="selectAll"> Todos</label>
-                <div id="orderCheckboxes" class="order-list"></div>
+                <div id="orderList" class="order-list"></div>
             </div>
-            <button onclick="updateOrderStatus('onGoing')">Marcar como A Caminho</button>
-            <button onclick="updateOrderStatus('ready')">Marcar como Pronto</button>
         </div>
         <div class="main-content">
             <div id="map"></div>
@@ -72,31 +69,32 @@
         async function fetchOrders() {
             try {
                 const response = await axios.get(firebaseFunctionUrl);
-                const orders = response.data;
-                updateOrderCheckboxes(orders);
-                updateMap(orders);
+                const filteredOrders = response.data.filter(order => 
+                    ['ready', 'onGoing', 'accepted', 'dispatched'].includes(order.status)
+                );
+                updateOrderList(filteredOrders);
+                updateMap(filteredOrders);
             } catch (error) {
                 console.error('Erro ao buscar pedidos:', error);
             }
         }
 
-        function updateOrderCheckboxes(orders) {
-            const checkboxesContainer = document.getElementById('orderCheckboxes');
-            checkboxesContainer.innerHTML = '';
+        function updateOrderList(orders) {
+            const orderList = document.getElementById('orderList');
+            orderList.innerHTML = '';
             orders.forEach(order => {
                 const orderDiv = document.createElement('div');
                 orderDiv.className = 'order-item';
                 orderDiv.innerHTML = `
-                    <label>
-                        <input type="checkbox" name="orderCheckbox" value="${order.id}">
-                        #${order.id} - ${getStatusDisplay(order.status)}
-                        ${order.courierName ? `<br><small>Motoboy: ${order.courierName}</small>` : ''}
-                    </label>
+                    <h3>Pedido #${order.id}</h3>
+                    <p>Status: ${getStatusDisplay(order.status)}</p>
+                    <p>Cliente: ${order.customer.customerName}</p>
+                    ${order.courierName ? `<p>Motoboy: ${order.courierName}</p>` : ''}
                     <div class="order-options">
                         <i class="fas fa-map-marker-alt" onclick="centerOrderOnMap('${order.id}')"></i>
                     </div>
                 `;
-                checkboxesContainer.appendChild(orderDiv);
+                orderList.appendChild(orderDiv);
             });
         }
 
@@ -105,13 +103,14 @@
             Object.values(markers).forEach(marker => marker.setMap(null));
             markers = {};
 
-            orders.forEach(order => {
+            for (const order of orders) {
                 const lat = order.deliveryPoint.coordinates.lat;
                 const lng = order.deliveryPoint.coordinates.lng;
                 const marker = new google.maps.Marker({
                     position: {lat, lng},
                     map: map,
-                    title: `#${order.id}`
+                    title: `Pedido #${order.id}`,
+                    icon: 'http://maps.google.com/mapfiles/ms/icons/red-dot.png'
                 });
 
                 markers[order.id] = marker;
@@ -119,10 +118,7 @@
                 marker.addListener('click', () => {
                     showOrderDetails(order);
                 });
-            });
 
-            // Atualizar localização dos motoboys
-            for (const order of orders) {
                 if (order.courierName) {
                     await updateCourierLocation(order.id);
                 }
@@ -206,28 +202,6 @@
                 infoWindow.open(map, marker);
             }
         }
-
-        function updateOrderStatus(newStatus) {
-            const selectedOrders = Array.from(document.querySelectorAll('input[name="orderCheckbox"]:checked'))
-                .map(checkbox => checkbox.value);
-
-            if (selectedOrders.length === 0) {
-                alert('Por favor, selecione pelo menos um pedido.');
-                return;
-            }
-
-            // Aqui você deve implementar a lógica para atualizar o status no Foody Delivery
-            // Como não temos acesso direto à API do Foody Delivery, vamos apenas simular a atualização
-            alert(`Status dos pedidos ${selectedOrders.join(', ')} atualizado para ${newStatus}`);
-            
-            // Após atualizar, recarregue os pedidos
-            fetchOrders();
-        }
-
-        document.getElementById('selectAll').addEventListener('change', function() {
-            const checkboxes = document.querySelectorAll('input[name="orderCheckbox"]');
-            checkboxes.forEach(checkbox => checkbox.checked = this.checked);
-        });
 
         // Inicializar o mapa e buscar pedidos
         initMap();
